# Smart_Touch_Dashboard_v3

./: .gitignore  README.md  platformio.ini
src/: main.cpp
src/gui/: GUI.h
src/gui/assets/fonts/: inter_13_700.c  inter_16_700.c  inter_18_700.c  inter_20_700.c
src/gui/assets/images/: upload_boxicons_movefilled_311692c184a64c08bfb8787434f8c460_png.c  upload_image_22x20_b651cde7f68349039acf67ed2d8c78f8_png.c  upload_image_23x16_8517ab1cf2f7404ea07af203450e815a_png.c  upload_image_25x12_e051409367764047bbc8e18cb4a579e6_png.c  upload_vector_2002_57_1900x2000_1805e00f10d24625b9ed78f0766fc960_png.c  upload_vector_2002_62_30x33_709f487cd8454bb19a2a161d1cc5b039_png.c
src/gui/assets/styles/: global_styles.c
src/gui/behavior/: events.c
src/gui/core/: gui_core.c  gui_core.h  variables.c  variables.h
src/gui/helpers/: ui_helpers.c  ui_helpers.h
src/gui/keep/: CMakeLists.txt  filelist.txt
src/gui/screens/: new_device_1.c
